# wgpu_test

./: .clang-format  .gitignore  CMakeLists.txt
Source/: CMakeLists.txt  Error.c  Error.h  GLFWPlataform.c  GLFWPlataform.h  Main.c  Plataform.c  Plataform.h  Renderer.h  Sf.c  Sf.h  WGPURenderer.c  WGPURenderer.h
Source/Common/: CMakeLists.txt  Error.c  Error.h  SF.c  SF.h
Source/Rendering/: CMakeLists.txt  WGPURenderer.c  WGPURenderer.h
source/: CMakeLists.txt  glfw_plataform.c  glfw_plataform.h  main.c  plataform.c  plataform.h  wgpu_renderer.c  wgpu_renderer.h
